--- a/src/styles/RenderForm.css
+++ b/src/styles/RenderForm.css
@@ -1,6 +1,6 @@
 .badge {
-  background-color: #9ae6b4;
-  color: #22543d;
+  /* background-color: #9ae6b4;
+  color: #22543d; */
   margin-right: 4px;
   padding: 4px 8px;
   border-radius: 12px;
