--- a/src/styles/RenderForm.css
+++ b/src/styles/RenderForm.css
@@ -5,6 +5,6 @@
   padding: 4px 8px;
   border-radius: 12px;
   font-size: 12px;
-  font-weight: bold;
+  /* font-weight: bold; */
   text-transform: uppercase;
 }
